--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
